# ime-border

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  ReadMe.md  ime-border.cmd  ime-control.cmd  pyproject.toml
.github/workflows/: ci.yml  release.yml
cli/python/: ime_control_main.py
cli/python/ime_control/: cli.py  komorebi.py  watcher.py  win32_ime.py
openspec/: config.yaml  project.md
openspec/changes/add-komorebi-ime-watcher/: design.md  proposal.md  tasks.md
openspec/changes/add-release-helper-script/: design.md  meta.yaml  proposal.md  tasks.md
openspec/changes/add-release-helper-script/specs/repository-governance/: spec.md
openspec/changes/add-versioned-release-artifacts/: design.md  proposal.md  tasks.md
openspec/changes/add-versioned-release-artifacts/specs/formal-cli-contract/: spec.md
openspec/changes/prepare-github-publication/: design.md  proposal.md  tasks.md
openspec/changes/prepare-github-publication/specs/repository-governance/: spec.md
openspec/changes/rename-ime-border-rust-migration/: design.md  meta.yaml  proposal.md  tasks.md
openspec/specs/formal-cli-contract/: spec.md
openspec/specs/repository-governance/: spec.md
openspec/templates/: change-meta.yaml
src/: cli.rs  komorebi.rs  lib.rs  main.rs  watcher.rs  win32_ime.rs
tests/: __init__.py  cli_contract.rs  repository_layout.rs  test_cli.py  test_komorebi.py  test_package_layout.py
tools/: build-portable.ps1  build_portable_exe.py  new_openspec_change.py  openspec_backlog.py  openspec_change_meta.py  release.ps1
(+1 files in other folders)
