[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ime-control"
version = "0.1.0"
description = "Watch Microsoft Pinyin English mode and drive komorebi border colors."
readme = "ReadMe.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
build = ["pyinstaller>=6.16,<7"]

[project.scripts]
ime-control = "ime_control.cli:main"

[tool.setuptools]
package-dir = {"" = "cli/python"}

[tool.setuptools.packages.find]
where = ["cli/python"]
